--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -579,12 +579,12 @@ add_library(becc_shared SHARED $<TARGET_OBJECTS:becc_objects>)
 if(WIN32)
     # set_target_properties(becc_static PROPERTIES OUTPUT_NAME "becc")
     set_target_properties(becc_static PROPERTIES
-        ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
+        ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
         OUTPUT_NAME "becc"
     )
     # set_target_properties(becc_shared PROPERTIES OUTPUT_NAME "becc")
     set_target_properties(becc_static PROPERTIES
-        ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
+        ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
         OUTPUT_NAME "becc"
     )
 else()
